<resources>
    <string name="app_name">Thesis</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Feed Berita Terbaru</string>
    <string name="menu_detect">Deteksi Kategori Berita</string>
    <string name="menu_saved">Berita Tersimpan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gagal_melakukan_koneksi_ke_server_nsilahkan_cek_koneksi_internet_anda">Gagal melakukan koneksi ke server \nSilahkan cek koneksi internet anda</string>
    <string name="cari_berita">Cari berita</string>
    <string name="hint">Masukkan judul berita yang ingin dicari</string>
    <string name="no_saved_news">Tidak ada berita tersimpan</string>
    <string name="tidak_ditemukan">Berita dengan kata kunci %s tidak ditemukan</string>
    <string name="hasil">Lihat feed dengan kategori %s</string>
    <string name="dapatkan_prediksi_kategori_dengan_judul_ini">Prediksi kategori</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="hasil_rekomendasi_feed_berita_berdasarkan_prediksi_kategori">Rekomendasi berita dengan kategori terkait</string>
    <string name="hasil_prediksi_adalah_kategori_s">Hasil prediksi adalah kategori %s</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang_kami">Tentang kami</string>
</resources>