<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aprilla.thesis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_detect"
            app:destination="@id/nav_detect"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true">
            <argument
                android:name="title"
                android:defaultValue="none" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_detect"
        android:name="com.aprilla.thesis.ui.detect.DetectFragment"
        android:label="@string/menu_detect"
        tools:layout="@layout/fragment_detect" >
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="none" />
    </fragment>

    <fragment
        android:id="@+id/nav_saved"
        android:name="com.aprilla.thesis.ui.saved.SavedNewsFragment"
        android:label="@string/menu_saved"
        tools:layout="@layout/fragment_savednews" />
    <activity
        android:id="@+id/searchResultActivity"
        android:name="com.aprilla.thesis.ui.result.SearchResultActivity"
        android:label="activity_search_result"
        tools:layout="@layout/activity_search_result" />
</navigation>